updating landing page info

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ description: Track and optimize your sales team in real time
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The best analytical platform to <strong>optimize your WUE</strong></h1>
-		<p class="subtext editable">Receive 72-hour WUE forecasts in real-time</p>
+		<h1 class="editable">The Best Analytical Platform to <strong>Optimize Your WUE</strong></h1>
+		<p class="subtext editable">Receive Spatially-Aware 72-hour WUE Forecasts in Real-Time</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -17,11 +17,11 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>We forecast <strong>On-site WUE</strong></h2>
+				<p>We leverage 4 years of hourly onsite WUE data from 1000+ locations to build scalable forecasting models for any location on Earth. Instead of training expensive, city-specific models, we use clustering techniques like Dynamic Time Warping and Catch22 to group cities with similar patterns. By creating representative series for each cluster and applying SARIMA models, we enable efficient, accurate forecasting. This multilevel approach is cost-effective and adaptable for future scalability. </p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/onsite.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -29,41 +29,17 @@ description: Track and optimize your sales team in real time
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2>As well as <strong>Off-site WUE</strong></h2>
+				<p>We are equipped with hourly data for 28 geographically partitioned EGRID regions, where all cities in the same region share the same offsite WUE. This massively reduces our problem space compared to Onsite WUE, and allows us to experiment with, and compare/contrast different modelling methodologies i.e. LSTMs, SARIMA, and TimesFM (Google's new foundation model for forecasting).</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section class="testimonial">
-		<div class="container flex">
-			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
-				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
-				</blockquote>
+				<img src="{{ site.baseurl }}/images/offsite.png" alt="Screenshot" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable"><strong>Get Started</strong> your sales process today</h2>
+		<div class="button alt"><a href="#">Get Started</a></div>
 	</section>
 </div>
