more small styling changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Track and optimize your sales team in real time
 		<p class="subtext editable">Receive Spatially-Aware 72-hour WUE Forecasts in Real-Time</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Learn More</a></div>
 		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="{{ site.baseurl }}/images/landing.png" alt="Screenshot" class="screenshot editable" />
 		</div>
 	</div>
 </section>
@@ -39,7 +39,7 @@ description: Track and optimize your sales team in real time
 	</section>
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Get Started</strong> your sales process today</h2>
+		<h2 class="editable"><strong>Optimize Water Usage and Help the Environment</strong></h2>
 		<div class="button alt"><a href="#">Get Started</a></div>
 	</section>
 </div>
