updated team members and trying to fix logo

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: The best analytical platform for forecasting WUE
+description: Spatially-aware 72-hour WUE forecasts
 ---
 <section class="hero">
 	<div class="text-container">
@@ -18,7 +18,7 @@ description: Track and optimize your sales team in real time
 		<div class="container flex">
 			<div class="text editable">
 				<h2>We forecast <strong>On-site WUE</strong></h2>
-				<p>We leverage 4 years of hourly onsite WUE data from 1000+ locations to build scalable forecasting models for any location on Earth. Instead of training expensive, city-specific models, we use clustering techniques like Dynamic Time Warping and Catch22 to group cities with similar patterns. By creating representative series for each cluster and applying SARIMA models, we enable efficient, accurate forecasting. This multilevel approach is cost-effective and adaptable for future scalability. </p>
+				<p>We leverage 4 years of hourly onsite WUE data from 1000+ locations to build scalable forecasting models for any location in the US. Instead of training expensive, city-specific models, we use clustering techniques like Dynamic Time Warping and Catch22 to group cities with similar patterns. By creating representative series for each cluster and applying SARIMA models, we enable efficient, accurate forecasting. This multilevel approach is cost-effective and adaptable for future scalability. </p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/onsite.png" alt="Screenshot" class="screenshot editable" />
