fixed navigation error and adding spacing

--- a/offsite.html
+++ b/offsite.html
@@ -1,5 +1,5 @@
 ---
-title: Onsite
+title: Offsite
 ---
 
 <div class="content"></div>
@@ -15,6 +15,8 @@ title: Onsite
                 </p>
 			</div>
 		</div>
+        <br></br>
+        <br></br>
         <div class="image">
             <img src="{{ site.baseurl }}/images/offsite_method.png" alt="Screenshot" class="screenshot editable" />
         </div>
