--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 ---
-title: Our team
+title: HydroScale Team
 description: >-
-  We've built an amazing, fantastic team of developers, marketers, designers and
-  sales people.
+  Meet the team behind HydroScale!
 ---
 
-<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
+<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> HydroScale Team</a></p>
 <ul class="staff">
 	{% for person in site.staff_members %}
 		<li>
