small misc changes

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
-heading: Get in touch today
-description: We'd love to help you improve your sales.
+heading: Feel free to reach out to the team!
+description: We typically respond within 24 hours
 
 map:
   latitude: -45.8787605
