--- a/onsite.html
+++ b/onsite.html
@@ -6,8 +6,7 @@ title: On-site WUE
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<p>We analyze four years of hourly onsite WUE data collected from over 1,000 locations across the United States. Rather than relying on expensive, location-specific models, we employ time series clustering to group locations with similar patterns and develop efficient cluster-specific models, significantly reducing computational complexity. Our approach explores a combination of advanced clustering techniques, including shape-based methods like Dynamic Time Warping (DTW) and feature-based methods leveraging canonical time-series characteristics (Catch22). These are paired with partitional, density-based, and neural network-based clustering algorithms such as K-Means, K-Medoids, HDBSCAN, and Self-Organizing Maps (SOM).
-                    To represent each cluster, we compute a representative time series using the Barycenter Average and implement SARIMA models to deliver accurate and efficient forecasting. This innovative, multilevel modeling approach uncovers meaningful patterns across diverse locations, ensuring both scalability and cost-effectiveness. By adopting these techniques, we not only optimize forecasting for current use but also establish a robust framework for extending our solution to global applications.
+				<p>We leverage 4 years of hourly onsite WUE data from 1000+ locations to build scalable forecasting models for any location in the US. Instead of training expensive, location-specific models, we leverage the power of cluster-specific models by experimenting across techniques in time series clustering to group cities with similar patterns. By creating representative series for each cluster and applying SARIMA models, we enable efficient, accurate forecasting. This multilevel approach is cost-effective and adaptable for future scalability.
                     </p>
 			</div>
 		</div>
