--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 title: HydroScale Team
 description: >-
-  Meet the team behind HydroScale!
+  Meet the team behind HydroScale! We are a team of students a part of the Master of Information and Data Science Program at UC Berkeley.
 ---
 
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> HydroScale Team</a></p>
